Text for dessert of TBD on reception page Fixed mobile menu button for registry page Changed text of help tooltip on requestSong Page Took out fun fact text on the_cast page and just put relations.  Also fixed the height problem and width problem on mobile devies.

--- a/src/main/resources/static/css/the_cast.css
+++ b/src/main/resources/static/css/the_cast.css
@@ -6,7 +6,7 @@
 .profile-card {
 	background-color: #222222;
 	margin-bottom: 20px;
-	height: 65%;
+	max-height: 80%;
 }
 
 .profile-pic {
